@@ -25,6 +25,8 @@ import io.micronaut.context.annotation.Primary;
 import io.micronaut.context.annotation.Prototype;
 import io.micronaut.context.annotation.Replaces;
 import io.micronaut.context.annotation.Secondary;
+import io.micronaut.context.condition.ConditionContext;
+import io.micronaut.context.condition.Failure;
 import io.micronaut.context.env.PropertyPlaceholderResolver;
 import io.micronaut.context.event.ApplicationEventListener;
 import io.micronaut.context.event.ApplicationEventPublisher;
@@ -71,6 +73,8 @@ import io.micronaut.core.convert.value.MutableConvertibleValues;
 import io.micronaut.core.io.ResourceLoader;
 import io.micronaut.core.io.scan.ClassPathResourceLoader;
 import io.micronaut.core.io.service.SoftServiceLoader;
+import io.micronaut.core.naming.NameResolver;
+import io.micronaut.core.naming.NameUtils;
 import io.micronaut.core.naming.Named;
 import io.micronaut.core.order.OrderUtil;
 import io.micronaut.core.order.Ordered;
@@ -101,6 +105,7 @@ import io.micronaut.inject.InjectionPoint;
 import io.micronaut.inject.MethodExecutionHandle;
 import io.micronaut.inject.ParametrizedBeanFactory;
 import io.micronaut.inject.ProxyBeanDefinition;
+import io.micronaut.inject.QualifiedBeanType;
 import io.micronaut.inject.ValidatedBeanDefinition;
 import io.micronaut.inject.proxy.InterceptedBeanProxy;
 import io.micronaut.inject.qualifiers.AnyQualifier;
@@ -153,13 +158,13 @@ public class DefaultBeanContext implements InitializableBeanContext {
     protected static final Logger LOG = LoggerFactory.getLogger(DefaultBeanContext.class);
     protected static final Logger LOG_LIFECYCLE = LoggerFactory.getLogger(DefaultBeanContext.class.getPackage().getName() + ".lifecycle");
     @SuppressWarnings("rawtypes")
-    private static final Qualifier PROXY_TARGET_QUALIFIER = new Qualifier<Object>() {
+    private static final Qualifier PROXY_TARGET_QUALIFIER = new Qualifier<>() {
         @SuppressWarnings("rawtypes")
         @Override
-        public <BT extends BeanType<Object>> Stream<BT> reduce(Class<Object> beanType, Stream<BT> candidates) {
+        public <T extends BeanType<Object>> Stream<T> reduce(Class<Object> beanType, Stream<T> candidates) {
             return candidates.filter(bt -> {
-                if (bt instanceof BeanDefinitionDelegate) {
-                    return !(((BeanDefinitionDelegate) bt).getDelegate() instanceof ProxyBeanDefinition);
+                if (bt instanceof BeanDefinitionDelegate<?> delegate) {
+                    return !(delegate.getDelegate() instanceof ProxyBeanDefinition);
                 } else {
                     return !(bt instanceof ProxyBeanDefinition);
                 }
@@ -191,6 +196,9 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     private final BeanContextConfiguration beanContextConfiguration;
     private final Collection<BeanDefinitionReference> beanDefinitionsClasses = new ConcurrentLinkedQueue<>();
+
+    private final Map<BeanKey<?>, BeanDefinitionReference> disabledBeans = new ConcurrentHashMap<>(20);
+    private final Map<String, List<String>> disabledConfigurations = new ConcurrentHashMap<>(5);
     private final Map<String, BeanConfiguration> beanConfigurations = new HashMap<>(10);
     private final Map<BeanKey, Boolean> containsBeanCache = new ConcurrentHashMap<>(30);
     private final Map<CharSequence, Object> attributes = Collections.synchronizedMap(new HashMap<>(5));
@@ -202,10 +210,10 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     private final Map<Argument, Collection<BeanDefinition>> beanCandidateCache = new ConcurrentLinkedHashMap.Builder<Argument, Collection<BeanDefinition>>().maximumWeightedCapacity(30).build();
 
-    private final Map<Class, Collection<BeanDefinitionReference>> beanIndex = new ConcurrentHashMap<>(12);
+    private final Map<Class<?>, Collection<BeanDefinitionReference>> beanIndex = new ConcurrentHashMap<>(12);
 
     private final ClassLoader classLoader;
-    private final Set<Class> thisInterfaces = CollectionUtils.setOf(
+    private final Set<Class<?>> thisInterfaces = CollectionUtils.setOf(
             BeanDefinitionRegistry.class,
             BeanContext.class,
             AnnotationMetadataResolver.class,
@@ -216,7 +224,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
             ValueResolver.class,
             PropertyPlaceholderResolver.class
     );
-    private final Set<Class> indexedTypes = CollectionUtils.setOf(
+    private final Set<Class<?>> indexedTypes = CollectionUtils.setOf(
             ResourceLoader.class,
             TypeConverter.class,
             TypeConverterRegistrar.class,
@@ -291,13 +299,13 @@ public class DefaultBeanContext implements InitializableBeanContext {
         this.classLoader = contextConfiguration.getClassLoader();
         this.customScopeRegistry = Objects.requireNonNull(createCustomScopeRegistry(), "Scope registry cannot be null");
         Set<Class<? extends Annotation>> eagerInitAnnotated = contextConfiguration.getEagerInitAnnotated();
-        List<String> eagerInitStereotypes = new ArrayList<>(eagerInitAnnotated.size());
+        List<String> configuredEagerSingletonAnnotations = new ArrayList<>(eagerInitAnnotated.size());
         for (Class<? extends Annotation> ann : eagerInitAnnotated) {
-            eagerInitStereotypes.add(ann.getName());
+            configuredEagerSingletonAnnotations.add(ann.getName());
         }
-        this.eagerInitStereotypes = eagerInitStereotypes.toArray(new String[0]);
-        this.eagerInitStereotypesPresent = !eagerInitStereotypes.isEmpty();
-        this.eagerInitSingletons = eagerInitStereotypesPresent && (eagerInitStereotypes.contains(AnnotationUtil.SINGLETON) || eagerInitStereotypes.contains(Singleton.class.getName()));
+        this.eagerInitStereotypes = configuredEagerSingletonAnnotations.toArray(new String[0]);
+        this.eagerInitStereotypesPresent = !configuredEagerSingletonAnnotations.isEmpty();
+        this.eagerInitSingletons = eagerInitStereotypesPresent && (configuredEagerSingletonAnnotations.contains(AnnotationUtil.SINGLETON) || configuredEagerSingletonAnnotations.contains(Singleton.class.getName()));
         this.beanContextConfiguration = contextConfiguration;
     }
 
@@ -367,7 +375,37 @@ public class DefaultBeanContext implements InitializableBeanContext {
      */
     protected void registerConversionService() {
         conversionService = MutableConversionService.create();
+        //noinspection resource
         registerSingleton(MutableConversionService.class, conversionService,  null, false);
+    }
+
+    /**
+     * Tracks when a bean or configuration is disabled.
+     * @param conditionContext The conditional context
+     * @param <C> The component type
+     */
+    @Internal
+    <C extends AnnotationMetadataProvider> void trackDisabledComponent(@NonNull ConditionContext<C> conditionContext) {
+        C component = conditionContext.getComponent();
+        List<String> reasons = conditionContext.getFailures().stream().map(Failure::getMessage).toList();
+        if (component instanceof QualifiedBeanType<?> beanType) {
+            try {
+                @SuppressWarnings("unchecked")
+                Argument<Object> argument = (Argument<Object>) beanType.getGenericBeanType();
+                @SuppressWarnings("unchecked")
+                Qualifier<Object> declaredQualifier = (Qualifier<Object>) beanType.getDeclaredQualifier();
+                this.disabledBeans.put(new BeanKey<>(argument, declaredQualifier), new DisabledBean<>(
+                    argument,
+                    declaredQualifier,
+                    reasons
+                ));
+            } catch (Exception | NoClassDefFoundError e) {
+                // it is theoretically possible that resolving the generic type results in an error
+                // in this case just ignore this as the maps built here are purely to aid error diagnosis
+            }
+        } else if (component instanceof BeanConfiguration configuration) {
+            this.disabledConfigurations.put(configuration.getName(), reasons);
+        }
     }
 
     /**
@@ -442,7 +480,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         if (type == null) {
             return AnnotationMetadata.EMPTY_METADATA;
         }
-        return findBeanDefinition(Argument.of(type), null, false)
+        return findBeanDefinitionInternal(Argument.of(type), null)
                 .map(AnnotationMetadataProvider::getAnnotationMetadata)
                 .orElse(AnnotationMetadata.EMPTY_METADATA);
     }
@@ -541,13 +579,13 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     @Override
-    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(Class<T> beanType, String method, Class... arguments) {
+    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(Class<T> beanType, String method, Class<?>... arguments) {
         return findExecutionHandle(beanType, null, method, arguments);
     }
 
     @Override
     public MethodExecutionHandle<?, Object> createExecutionHandle(BeanDefinition<? extends Object> beanDefinition, ExecutableMethod<Object, ?> method) {
-        return new MethodExecutionHandle<Object, Object>() {
+        return new MethodExecutionHandle<>() {
 
             private Object target;
 
@@ -612,7 +650,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     @SuppressWarnings("unchecked")
     @Override
-    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(Class<T> beanType, Qualifier<?> qualifier, String method, Class... arguments) {
+    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(Class<T> beanType, Qualifier<?> qualifier, String method, Class<?>... arguments) {
         Optional<? extends BeanDefinition<?>> foundBean = findBeanDefinition(beanType, (Qualifier) qualifier);
         if (foundBean.isPresent()) {
             BeanDefinition<?> beanDefinition = foundBean.get();
@@ -625,7 +663,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 return beanDefinition.findPossibleMethods(method)
                         .findFirst()
                         .filter(m -> {
-                            Class[] argTypes = m.getArgumentTypes();
+                            Class<?>[] argTypes = m.getArgumentTypes();
                             if (argTypes.length == arguments.length) {
                                 for (int i = 0; i < argTypes.length; i++) {
                                     if (!arguments[i].isAssignableFrom(argTypes[i])) {
@@ -643,7 +681,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     @Override
-    public <T, R> Optional<ExecutableMethod<T, R>> findExecutableMethod(Class<T> beanType, String method, Class[] arguments) {
+    public <T, R> Optional<ExecutableMethod<T, R>> findExecutableMethod(Class<T> beanType, String method, Class<?>[] arguments) {
         if (beanType != null) {
             Collection<BeanDefinition<T>> definitions = getBeanDefinitions(beanType);
             if (!definitions.isEmpty()) {
@@ -662,7 +700,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     @SuppressWarnings("unchecked")
     @Override
-    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(T bean, String method, Class[] arguments) {
+    public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(T bean, String method, Class<?>[] arguments) {
         if (bean != null) {
             Optional<? extends BeanDefinition<?>> foundBean = findBeanDefinition(bean.getClass());
             if (foundBean.isPresent()) {
@@ -690,51 +728,36 @@ public class DefaultBeanContext implements InitializableBeanContext {
             beanDefinition = findBeanDefinition(type, qualifier).orElse(null);
             if (beanDefinition == null) {
                 // Purge cache miss
-                beanCandidateCache.entrySet().removeIf(entry -> entry.getKey().isInstance(singleton));
-                beanConcreteCandidateCache.entrySet().removeIf(entry -> entry.getKey().beanType.isInstance(singleton));
+                purgeCacheForBeanInstance(singleton);
             }
         } else {
             beanDefinition = null;
         }
-        if (beanDefinition != null && beanDefinition.getBeanType().isInstance(singleton)) {
+        if (beanDefinition != null && !(beanDefinition instanceof RuntimeBeanDefinition<T>) && beanDefinition.getBeanType().isInstance(singleton)) {
             try (BeanResolutionContext context = newResolutionContext(beanDefinition, null)) {
                 doInject(context, singleton, beanDefinition);
                 DefaultBeanContext.BeanKey<T> key = new DefaultBeanContext.BeanKey<>(beanDefinition.asArgument(), qualifier);
                 singletonScope.registerSingletonBean(BeanRegistration.of(this, key, beanDefinition, singleton), qualifier);
             }
         } else {
-            NoInjectionBeanDefinition<T> dynamicRegistration = new NoInjectionBeanDefinition<>(singleton.getClass(), qualifier);
-            if (qualifier instanceof Named) {
-                final BeanDefinitionDelegate<T> delegate = BeanDefinitionDelegate.create(dynamicRegistration);
-                delegate.put(BeanDefinition.NAMED_ATTRIBUTE, ((Named) qualifier).getName());
-                beanDefinition = delegate;
-            } else {
-                beanDefinition = dynamicRegistration;
-            }
-            beanDefinitionsClasses.add(dynamicRegistration);
-            DefaultBeanContext.BeanKey<T> key = new DefaultBeanContext.BeanKey<>(beanDefinition.asArgument(), qualifier);
-            singletonScope.registerSingletonBean(BeanRegistration.of(this, key, dynamicRegistration, singleton), qualifier);
+            RuntimeBeanDefinition<T> runtimeBeanDefinition = RuntimeBeanDefinition.builder(type, () -> singleton)
+                .singleton(true)
+                .qualifier(qualifier)
+                .build();
 
-            for (Class indexedType : indexedTypes) {
+            var registration = BeanRegistration.of(
+                this,
+                new BeanKey<>(runtimeBeanDefinition, qualifier),
+                runtimeBeanDefinition,
+                singleton
+            );
+            singletonScope.registerSingletonBean(registration, qualifier);
+            registerBeanDefinition(runtimeBeanDefinition);
+
+            for (Class<?> indexedType : indexedTypes) {
                 if (indexedType == type || indexedType.isAssignableFrom(type)) {
                     final Collection<BeanDefinitionReference> indexed = resolveTypeIndex(indexedType);
-                    BeanDefinition<T> finalBeanDefinition = beanDefinition;
-                    indexed.add(new AbstractBeanDefinitionReference(type.getName(), type.getName()) {
-                        @Override
-                        protected Class<? extends BeanDefinition<?>> getBeanDefinitionType() {
-                            return (Class<? extends BeanDefinition<?>>) finalBeanDefinition.getClass();
-                        }
-
-                        @Override
-                        public BeanDefinition load() {
-                            return finalBeanDefinition;
-                        }
-
-                        @Override
-                        public Class getBeanType() {
-                            return type;
-                        }
-                    });
+                    indexed.add(runtimeBeanDefinition);
                     break;
                 }
             }
@@ -784,7 +807,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
     @Override
     public <T> BeanDefinition<T> getBeanDefinition(Argument<T> beanType, Qualifier<T> qualifier) {
         return findBeanDefinition(beanType, qualifier)
-                .orElseThrow(() -> new NoSuchBeanException(beanType, qualifier));
+                .orElseThrow(() -> newNoSuchBeanException(null, beanType, qualifier, null));
     }
 
     @Override
@@ -796,8 +819,8 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return findConcreteCandidate(null, beanType, qualifier, true);
     }
 
-    private <T> Optional<BeanDefinition<T>> findBeanDefinition(Argument<T> beanType, Qualifier<T> qualifier, boolean throwNonUnique) {
-        return findConcreteCandidate(null, beanType, qualifier, throwNonUnique);
+    private <T> Optional<BeanDefinition<T>> findBeanDefinitionInternal(Argument<T> beanType, Qualifier<T> qualifier) {
+        return findConcreteCandidate(null, beanType, qualifier, false);
     }
 
     @Override
@@ -828,7 +851,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         Objects.requireNonNull(beanType, "Bean type cannot be null");
         Collection<BeanDefinition<T>> candidates = findBeanCandidatesInternal(null, beanType);
         if (qualifier != null) {
-            candidates = qualifier.reduce(beanType.getType(), new ArrayList<>(candidates).stream()).collect(Collectors.toList());
+            candidates = qualifier.reduce(beanType.getType(), candidates.stream()).toList();
         }
         return Collections.unmodifiableCollection(candidates);
     }
@@ -877,7 +900,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
             if (AbstractBeanContextConditional.ConditionLog.LOG.isDebugEnabled()) {
                 AbstractBeanContextConditional.ConditionLog.LOG.debug("Bean of type [{}] disabled for reason: {}", beanType.getSimpleName(), e.getMessage());
             }
-            throw new NoSuchBeanException(beanType, qualifier);
+            throw newNoSuchBeanException(
+                null,
+                beanType,
+                qualifier,
+                "Bean of type [" + beanType.getTypeString(true) + "] disabled for reason: " + e.getMessage()
+            );
         }
     }
 
@@ -921,6 +949,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return streamOfType(null, beanType, qualifier);
     }
 
+    @Override
+    public <V> Map<String, V> mapOfType(Argument<V> beanType, Qualifier<V> qualifier) {
+        return mapOfType(null, beanType, qualifier);
+    }
+
     /**
      * Obtains a stream of beans of the given type and qualifier.
      *
@@ -932,6 +965,65 @@ public class DefaultBeanContext implements InitializableBeanContext {
      */
     protected <T> Stream<T> streamOfType(BeanResolutionContext resolutionContext, Class<T> beanType, Qualifier<T> qualifier) {
         return streamOfType(resolutionContext, Argument.of(beanType), qualifier);
+    }
+
+    /**
+     * Obtains a map of beans of the given type and qualifier.
+     * @param resolutionContext  The resolution context
+     * @param beanType           The bean type
+     * @param qualifier          The qualifier
+     * @param <V>                The bean type
+     * @return A map of beans, never {@code null}.
+     * @since 4.0.0
+     */
+    protected <V> @NonNull Map<String, V> mapOfType(@Nullable BeanResolutionContext resolutionContext, @NonNull Argument<V> beanType, @Nullable Qualifier<V> qualifier) {
+        // try and find a bean that implements the map with the generics
+        Argument<Map<String, V>> mapType = Argument.mapOf(Argument.of(String.class), beanType);
+        @SuppressWarnings("unchecked") Qualifier<Map<String, V>> mapQualifier = (Qualifier<Map<String, V>>) qualifier;
+        BeanDefinition<Map<String, V>> existingBean = findBeanDefinitionInternal(mapType, mapQualifier).orElse(null);
+        if (existingBean != null) {
+            return getBean(existingBean);
+        } else {
+            Collection<BeanRegistration<V>> beanRegistrations = getBeanRegistrations(resolutionContext, beanType, qualifier);
+            if (beanRegistrations.isEmpty()) {
+                return Collections.emptyMap();
+            } else {
+                try {
+                    return beanRegistrations.stream().collect(Collectors.toUnmodifiableMap(
+                        DefaultBeanContext::resolveKey,
+                        reg -> reg.bean
+                    ));
+                } catch (IllegalStateException e) { // occurs for duplicate keys
+                    List<BeanDefinition<V>> beanDefinitions = beanRegistrations.stream().map(reg -> reg.beanDefinition).toList();
+                    throw new DependencyInjectionException(
+                        resolutionContext,
+                        "Injecting a map of beans requires each bean to define a qualifier. Multiple beans were found missing a qualifier resulting in duplicate keys: " + e.getMessage(),
+                        new NonUniqueBeanException(
+                            beanType.getType(),
+                            beanDefinitions.iterator()
+                        )
+                    );
+                }
+            }
+        }
+    }
+
+    @NonNull
+    private static String resolveKey(BeanRegistration<?> reg) {
+        BeanDefinition<?> definition = reg.beanDefinition;
+        BeanIdentifier identifier = reg.identifier;
+        if (definition instanceof NameResolver resolver) {
+            return resolver.resolveName().orElse(identifier.getName());
+        } else {
+            String name = identifier.getName();
+            if (name.equals(Primary.SIMPLE_NAME)) {
+                Class<?> candidateType = reg.beanDefinition.getBeanType();
+                String candidateSimpleName = candidateType.getSimpleName();
+                return NameUtils.decapitalize(candidateSimpleName);
+            } else {
+                return name;
+            }
+        }
     }
 
     /**
@@ -994,7 +1086,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 return doCreateBean(resolutionContext, candidate.get(), qualifier, argumentValues);
             }
         }
-        throw new NoSuchBeanException(beanType);
+        throw newNoSuchBeanException(
+            null,
+            Argument.of(beanType),
+            qualifier,
+            null
+        );
     }
 
     @NonNull
@@ -1009,7 +1106,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 return doCreateBean(resolutionContext, definition, beanArg, qualifier, args);
             }
         }
-        throw new NoSuchBeanException(beanType);
+        throw newNoSuchBeanException(
+            null,
+            Argument.of(beanType),
+            qualifier,
+            null
+        );
     }
 
     /**
@@ -1330,7 +1432,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 return doCreateBean(context, candidate, qualifier);
             }
         }
-        throw new NoSuchBeanException(beanType);
+        throw newNoSuchBeanException(
+            resolutionContext,
+            Argument.of(beanType),
+            qualifier,
+            null
+        );
     }
 
     /**
@@ -1438,7 +1545,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     @NonNull
     @Override
-    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Class<T> beanType, @NonNull String method, @NonNull Class[] arguments) {
+    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Class<T> beanType, @NonNull String method, @NonNull Class<?>[] arguments) {
         ArgumentUtils.requireNonNull("beanType", beanType);
         ArgumentUtils.requireNonNull("method", method);
         BeanDefinition<T> definition = getProxyTargetBeanDefinition(beanType, null);
@@ -1447,7 +1554,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     @NonNull
     @Override
-    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Class<T> beanType, Qualifier<T> qualifier, @NonNull String method, Class... arguments) {
+    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Class<T> beanType, Qualifier<T> qualifier, @NonNull String method, Class<?>... arguments) {
         ArgumentUtils.requireNonNull("beanType", beanType);
         ArgumentUtils.requireNonNull("method", method);
         BeanDefinition<T> definition = getProxyTargetBeanDefinition(beanType, qualifier);
@@ -1455,7 +1562,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     @Override
-    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Argument<T> beanType, Qualifier<T> qualifier, @NonNull String method, Class... arguments) {
+    public <T, R> Optional<ExecutableMethod<T, R>> findProxyTargetMethod(@NonNull Argument<T> beanType, Qualifier<T> qualifier, @NonNull String method, Class<?>... arguments) {
         ArgumentUtils.requireNonNull("beanType", beanType);
         ArgumentUtils.requireNonNull("method", method);
         BeanDefinition<T> definition = getProxyTargetBeanDefinition(beanType, qualifier);
@@ -1519,7 +1626,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
             return Collections.emptyList();
         }
         if (CollectionUtils.isNotEmpty(candidates)) {
-            filterProxiedTypes(candidates, true, true, null);
+            filterProxiedTypes(candidates, true);
             filterReplacedBeans(null, candidates);
         }
         return candidates;
@@ -1550,10 +1657,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
     @Override
     public Collection<BeanDefinitionReference<?>> getBeanDefinitionReferences() {
         if (!beanDefinitionsClasses.isEmpty()) {
-            final List refs = beanDefinitionsClasses.stream().filter(ref -> ref.isEnabled(this))
-                    .collect(Collectors.toList());
+            final List refs = beanDefinitionsClasses.stream()
+                    .filter(ref -> ref.isEnabled(this))
+                    .toList();
 
-            return Collections.unmodifiableList(refs);
+            return refs;
         }
         return Collections.emptyList();
     }
@@ -1563,12 +1671,30 @@ public class DefaultBeanContext implements InitializableBeanContext {
     @NonNull
     public <B> BeanContext registerBeanDefinition(@NonNull RuntimeBeanDefinition<B> definition) {
         Objects.requireNonNull(definition, "Bean definition cannot be null");
+        BeanDefinition<B> existing = findBeanDefinition(definition.getGenericBeanType(), definition.getDeclaredQualifier()).orElse(null);
+        if (existing instanceof RuntimeBeanDefinition<B> runtimeBeanDefinition) {
+            this.beanDefinitionsClasses.remove(runtimeBeanDefinition);
+        }
+        for (Class<?> indexedType : indexedTypes) {
+            if (definition.isCandidateBean(Argument.of(indexedType))) {
+                Collection<BeanDefinitionReference> index = resolveTypeIndex(indexedType);
+                if (existing instanceof RuntimeBeanDefinition<B> runtimeBeanDefinition) {
+                    index.remove(runtimeBeanDefinition);
+                }
+                index.add(definition);
+            }
+        }
         this.beanDefinitionsClasses.add(definition);
-        beanCandidateCache.entrySet().removeIf(entry -> entry.getKey().isAssignableFrom(definition.getBeanType()));
-        beanConcreteCandidateCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(definition.getBeanType()));
-        singletonBeanRegistrations.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(definition.getBeanType()));
-        containsBeanCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(definition.getBeanType()));
+        Class<B> beanType = definition.getBeanType();
+        purgeCacheForBeanType(beanType);
         return this;
+    }
+
+    private <B> void purgeCacheForBeanType(Class<B> beanType) {
+        beanCandidateCache.entrySet().removeIf(entry -> entry.getKey().isAssignableFrom(beanType));
+        beanConcreteCandidateCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
+        singletonBeanRegistrations.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
+        containsBeanCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
     }
 
     /**
@@ -1917,7 +2043,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                     throw new BeanInstantiationException("Bean definition [" + contextScopeBean.getName() + "] could not be loaded: " + e.getMessage(), e);
                 }
             }
-            filterProxiedTypes((Collection) contextBeans, true, false, null);
+            filterProxiedTypes((Collection) contextBeans, false);
             filterReplacedBeans(null, (Collection) contextBeans);
             OrderUtil.sort(contextBeans);
             for (BeanDefinition contextScopeDefinition : contextBeans) {
@@ -2091,6 +2217,16 @@ public class DefaultBeanContext implements InitializableBeanContext {
             beanDefinitionsClasses = this.beanDefinitionsClasses;
         }
 
+        return collectBeanCandidates(resolutionContext, beanType, filterProxied, predicate, beanDefinitionsClasses);
+    }
+
+    @NonNull
+    private <T> Set<BeanDefinition<T>> collectBeanCandidates(
+        BeanResolutionContext resolutionContext,
+        Argument<T> beanType,
+        boolean filterProxied,
+        Predicate<BeanDefinition<T>> predicate,
+        Collection<BeanDefinitionReference> beanDefinitionsClasses) {
         Set<BeanDefinition<T>> candidates;
         if (!beanDefinitionsClasses.isEmpty()) {
 
@@ -2119,7 +2255,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
             if (!candidates.isEmpty()) {
                 if (filterProxied) {
-                    filterProxiedTypes(candidates, true, false, null);
+                    filterProxiedTypes(candidates, false);
                 }
                 filterReplacedBeans(resolutionContext, candidates);
             }
@@ -2193,8 +2329,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                     candidates = candidates
                             .stream()
                             .filter(candidate ->
-                                    !(candidate instanceof NoInjectionBeanDefinition) &&
-                                            candidate.getBeanType() == beanClass
+                                candidate.getBeanType() == beanClass
                             )
                             .collect(Collectors.toList());
                 }
@@ -2507,7 +2642,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                         }
                     });
 
-                    filterProxiedTypes((Collection) parallelDefinitions, true, false, null);
+                    filterProxiedTypes((Collection) parallelDefinitions, false);
                     filterReplacedBeans(null, (Collection) parallelDefinitions);
 
                     parallelDefinitions.forEach(beanDefinition -> ForkJoinPool.commonPool().execute(() -> {
@@ -2813,9 +2948,105 @@ public class DefaultBeanContext implements InitializableBeanContext {
             registration = null;
         }
         if ((registration == null || registration.bean == null) && throwNoSuchBean) {
-            throw new NoSuchBeanException(beanType, qualifier);
+            throw newNoSuchBeanException(resolutionContext, beanType, qualifier, null);
         }
         return registration;
+    }
+
+    /**
+     * Trigger a no such bean exception. Subclasses can improve the exception with downstream diagnosis as necessary.
+     *
+     * @param <T>               The type of the bean
+     * @param resolutionContext The resolution context
+     * @param beanType          The bean type
+     * @param qualifier         The qualifier
+     * @param message           A message to use
+     * @return A no such bean exception
+     */
+    @Internal
+    @NonNull
+    protected <T> NoSuchBeanException newNoSuchBeanException(
+        @Nullable BeanResolutionContext resolutionContext,
+        @NonNull Argument<T> beanType,
+        @NonNull Qualifier<T> qualifier,
+        @Nullable String message) {
+        if (message != null) {
+            return new NoSuchBeanException(beanType, qualifier, message);
+        } else {
+            String disabledMessage = resolveDisabledBeanMessage(resolutionContext, beanType, qualifier);
+
+            if (disabledMessage != null) {
+                return new NoSuchBeanException(beanType, qualifier, disabledMessage);
+            } else {
+                return new NoSuchBeanException(beanType, qualifier);
+            }
+        }
+    }
+
+    /**
+     * Resolves the message to use for a disabled bean.
+     * @param resolutionContext The resolution context
+     * @param beanType The bean type
+     * @param qualifier The qualifier
+     * @return The message or null if none exists
+     * @param <T> The bean type
+     */
+    @Nullable
+    protected  <T> String resolveDisabledBeanMessage(BeanResolutionContext resolutionContext, Argument<T> beanType, Qualifier<T> qualifier) {
+        String disabledMessage = null;
+        for (Map.Entry<String, List<String>> entry : disabledConfigurations.entrySet()) {
+            String pkg = entry.getKey();
+            if (beanType.getTypeName().startsWith(pkg + ".")) {
+                StringBuilder messageBuilder = new StringBuilder();
+                String ls = System.getProperty("line.separator");
+                messageBuilder.append("The bean [")
+                              .append(beanType.getTypeString(true))
+                              .append("] is disabled because it is within the package [")
+                              .append(pkg)
+                               .append("] which is disabled due to bean requirements: ")
+                              .append(ls);
+                for (String failure : entry.getValue()) {
+                    messageBuilder.append("* ").append(failure).append(ls);
+                }
+
+                disabledMessage = messageBuilder.toString();
+                break;
+            }
+        }
+
+        if (disabledMessage == null) {
+
+            Set<BeanDefinition<T>> beanDefinitions = collectBeanCandidates(
+                resolutionContext,
+                beanType,
+                true,
+                null,
+                disabledBeans.values()
+            );
+            if (qualifier != null) {
+                beanDefinitions = qualifier
+                    .reduce(beanType.getType(), beanDefinitions.stream())
+                    .collect(Collectors.toSet());
+            }
+
+            if (!beanDefinitions.isEmpty()) {
+                StringBuilder messageBuilder = new StringBuilder();
+                String ls = System.getProperty("line.separator");
+                messageBuilder.append("The following matching beans are disabled by bean requirements: ").append(ls);
+                for (BeanDefinition<T> beanDefinition : beanDefinitions) {
+                    messageBuilder.append("* Bean of type [").append(beanDefinition.asArgument().getTypeString(false))
+                        .append("] is disabled because: ").append(ls);
+                    if (beanDefinition instanceof DisabledBean<T> disabledBean) {
+                        for (String failure : disabledBean.reasons()) {
+                            messageBuilder.append("   - ").append(failure).append(ls);
+                        }
+                    }
+                }
+
+                disabledMessage = messageBuilder.toString();
+            }
+        }
+        return disabledMessage;
     }
 
     @Nullable
@@ -2846,7 +3077,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
         if (injectionPointSegment == null || !injectionPointSegment.getArgument().isNullable()) {
             throw new BeanContextException("Failed to obtain injection point. No valid injection path present in path: " + path);
         } else if (throwNoSuchBean) {
-            throw new NoSuchBeanException(beanType, qualifier);
+            throw newNoSuchBeanException(
+                resolutionContext,
+                beanType,
+                qualifier,
+                null
+            );
         }
         return null;
     }
@@ -3085,77 +3321,54 @@ public class DefaultBeanContext implements InitializableBeanContext {
                                                                          boolean throwNonUnique,
                                                                          boolean filterProxied) {
 
-        Predicate<BeanDefinition<T>> predicate = new Predicate<BeanDefinition<T>>() {
-            @Override
-            public boolean test(BeanDefinition<T> candidate) {
-                if (candidate.isAbstract()) {
-                    return false;
-                }
-                if (qualifier != null) {
-                    if (candidate instanceof NoInjectionBeanDefinition) {
-                        NoInjectionBeanDefinition noInjectionBeanDefinition = (NoInjectionBeanDefinition) candidate;
-                        return qualifier.contains(noInjectionBeanDefinition.getQualifier());
-                    }
-                }
-                return true;
+        Predicate<BeanDefinition<T>> predicate = candidate -> !candidate.isAbstract();
+        Collection<BeanDefinition<T>> candidates = findBeanCandidates(resolutionContext, beanType, filterProxied, predicate);
+        return pickOneBean(beanType, qualifier, throwNonUnique, candidates);
+    }
 
-            }
-        };
-
-        Collection<BeanDefinition<T>> candidates = new ArrayList<>(findBeanCandidates(resolutionContext, beanType, filterProxied, predicate));
+    @NonNull
+    private <T> Optional<BeanDefinition<T>> pickOneBean(
+        Argument<T> beanType,
+        Qualifier<T> qualifier,
+        boolean throwNonUnique,
+        Collection<BeanDefinition<T>> candidates) {
         if (candidates.isEmpty()) {
             return Optional.empty();
         }
-        filterProxiedTypes(candidates, filterProxied, false, predicate);
+        BeanDefinition<T> definition;
+        if (qualifier != null) {
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Qualifying bean [{}] for qualifier: {} ", beanType.getName(), qualifier);
+            }
 
-        int size = candidates.size();
-        BeanDefinition<T> definition = null;
-        if (size > 0) {
-            if (qualifier != null) {
+            Stream<BeanDefinition<T>> qualified = qualifier.reduce(beanType.getType(), candidates.stream());
+            List<BeanDefinition<T>> beanDefinitionList = qualified.toList();
+            if (beanDefinitionList.isEmpty()) {
                 if (LOG.isDebugEnabled()) {
-                    LOG.debug("Qualifying bean [{}] for qualifier: {} ", beanType.getName(), qualifier);
+                    LOG.debug("No qualifying beans of type [{}] found for qualifier: {} ", beanType.getName(), qualifier);
                 }
+                return Optional.empty();
+            }
 
-                Stream<BeanDefinition<T>> candidateStream = candidates.stream().filter(c -> {
-                    if (!c.isAbstract()) {
-                        if (c instanceof NoInjectionBeanDefinition) {
-                            NoInjectionBeanDefinition noInjectionBeanDefinition = (NoInjectionBeanDefinition) c;
-                            return qualifier.contains(noInjectionBeanDefinition.getQualifier());
-                        }
-                        return true;
-                    }
-                    return false;
-                });
-
-                Stream<BeanDefinition<T>> qualified = qualifier.reduce(beanType.getType(), candidateStream);
-                List<BeanDefinition<T>> beanDefinitionList = qualified.collect(Collectors.toList());
-                if (beanDefinitionList.isEmpty()) {
-                    if (LOG.isDebugEnabled()) {
-                        LOG.debug("No qualifying beans of type [{}] found for qualifier: {} ", beanType.getName(), qualifier);
-                    }
-                    return Optional.empty();
-                }
-
-                definition = lastChanceResolve(
-                        beanType,
-                        qualifier,
-                        throwNonUnique,
-                        beanDefinitionList
-                );
+            definition = lastChanceResolve(
+                beanType,
+                qualifier,
+                throwNonUnique,
+                beanDefinitionList
+            );
+        } else {
+            if (candidates.size() == 1) {
+                definition = candidates.iterator().next();
             } else {
-                if (candidates.size() == 1) {
-                    definition = candidates.iterator().next();
-                } else {
-                    if (LOG.isDebugEnabled()) {
-                        LOG.debug("Searching for @Primary for type [{}] from candidates: {} ", beanType.getName(), candidates);
-                    }
-                    definition = lastChanceResolve(
-                            beanType,
-                            qualifier,
-                            throwNonUnique,
-                            candidates
-                    );
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Searching for @Primary for type [{}] from candidates: {} ", beanType.getName(), candidates);
                 }
+                definition = lastChanceResolve(
+                    beanType,
+                    null,
+                    throwNonUnique,
+                    candidates
+                );
             }
         }
         if (LOG.isDebugEnabled() && definition != null) {
@@ -3168,29 +3381,22 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return Optional.ofNullable(definition);
     }
 
-    private <T> void filterProxiedTypes(Collection<BeanDefinition<T>> candidates, boolean filterProxied, boolean filterDelegates, Predicate<BeanDefinition<T>> predicate) {
+    private <T> void filterProxiedTypes(
+        Collection<BeanDefinition<T>> candidates,
+        boolean filterDelegates) {
         int count = candidates.size();
-        Set<Class> proxiedTypes = new HashSet<>(count);
+        Set<Class<?>> proxiedTypes = new HashSet<>(count);
         Iterator<BeanDefinition<T>> i = candidates.iterator();
         Collection<BeanDefinition<T>> delegates = filterDelegates ? new ArrayList<>(count) : Collections.emptyList();
         while (i.hasNext()) {
             BeanDefinition<T> candidate = i.next();
-            if (candidate instanceof ProxyBeanDefinition) {
-                if (filterProxied) {
-                    proxiedTypes.add(((ProxyBeanDefinition) candidate).getTargetDefinitionType());
-                } else {
-                    proxiedTypes.add(candidate.getClass());
-                }
-            } else if (candidate instanceof BeanDefinitionDelegate) {
-                BeanDefinition<T> delegate = ((BeanDefinitionDelegate<T>) candidate).getDelegate();
-                if (filterDelegates) {
-                    i.remove();
+            if (candidate instanceof ProxyBeanDefinition<T> proxyBeanDefinition) {
+                proxiedTypes.add(proxyBeanDefinition.getTargetDefinitionType());
+            } else if (filterDelegates && candidate instanceof BeanDefinitionDelegate<T> delegate) {
+                i.remove();
 
-                    if (!delegates.contains(delegate) && (predicate == null || predicate.test(delegate))) {
-                        delegates.add(delegate);
-                    }
-                } else if (filterProxied && delegate instanceof ProxyBeanDefinition) {
-                    proxiedTypes.add(((ProxyBeanDefinition) delegate).getTargetDefinitionType());
+                if (!delegates.contains(delegate)) {
+                    delegates.add(delegate);
                 }
             }
         }
@@ -3199,13 +3405,14 @@ public class DefaultBeanContext implements InitializableBeanContext {
         }
         if (!proxiedTypes.isEmpty()) {
             candidates.removeIf(candidate -> {
-                if (candidate instanceof BeanDefinitionDelegate) {
-                    return proxiedTypes.contains(((BeanDefinitionDelegate<T>) candidate).getDelegate().getClass());
+                if (candidate instanceof BeanDefinitionDelegate<T> delegate) {
+                    return proxiedTypes.contains(delegate.getDelegate().getClass());
                 } else {
                     return proxiedTypes.contains(candidate.getClass());
                 }
             });
         }
+
     }
 
     private <T> BeanDefinition<T> lastChanceResolve(Argument<T> beanType,
@@ -3217,7 +3424,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         if (candidates.size() > 1) {
             List<BeanDefinition<T>> primary = candidates.stream()
                     .filter(BeanDefinition::isPrimary)
-                    .collect(Collectors.toList());
+                    .toList();
             if (!primary.isEmpty()) {
                 candidates = primary;
             }
@@ -3226,7 +3433,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
             return candidates.iterator().next();
         }
         BeanDefinition<T> definition = null;
-        candidates = candidates.stream().filter(candidate -> !candidate.hasDeclaredStereotype(Secondary.class)).collect(Collectors.toList());
+        candidates = candidates.stream().filter(candidate -> !candidate.hasDeclaredStereotype(Secondary.class)).toList();
         if (candidates.size() == 1) {
             return candidates.iterator().next();
         } else if (candidates.stream().anyMatch(candidate -> candidate.hasAnnotation(Order.class))) {
@@ -3304,16 +3511,16 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 }
             }
             final AnnotationMetadata annotationMetadata = beanDefinitionReference.getAnnotationMetadata();
-            Class[] indexes = annotationMetadata.classValues(INDEXES_TYPE);
+            Class<?>[] indexes = annotationMetadata.classValues(INDEXES_TYPE);
             if (indexes.length > 0) {
                 //noinspection ForLoopReplaceableByForEach
                 for (int i = 0; i < indexes.length; i++) {
-                    Class indexedType = indexes[i];
+                    Class<?> indexedType = indexes[i];
                     resolveTypeIndex(indexedType).add(beanDefinitionReference);
                 }
             } else {
                 if (annotationMetadata.hasStereotype(ADAPTER_TYPE)) {
-                    final Class aClass = annotationMetadata.classValue(ADAPTER_TYPE, AnnotationMetadata.VALUE_MEMBER).orElse(null);
+                    final Class<?> aClass = annotationMetadata.classValue(ADAPTER_TYPE, AnnotationMetadata.VALUE_MEMBER).orElse(null);
                     if (indexedTypes.contains(aClass)) {
                         resolveTypeIndex(aClass).add(beanDefinitionReference);
                     }
@@ -3413,11 +3620,13 @@ public class DefaultBeanContext implements InitializableBeanContext {
         }
 
         Collection<BeanDefinition<T>> beanDefinitions = findBeanCandidatesInternal(resolutionContext, beanType);
-        Stream<BeanDefinition<T>> candidateStream = applyBeanResolutionFilters(resolutionContext, beanDefinitions.stream());
-        if (qualifier != null) {
-            candidateStream = qualifier.reduce(beanType.getType(), candidateStream);
+        if (!beanDefinitions.isEmpty()) {
+            Stream<BeanDefinition<T>> candidateStream = applyBeanResolutionFilters(resolutionContext, beanDefinitions.stream());
+            if (qualifier != null) {
+                candidateStream = qualifier.reduce(beanType.getType(), candidateStream);
+            }
+            beanDefinitions = candidateStream.toList();
         }
-        beanDefinitions = candidateStream.collect(Collectors.toList());
 
         Collection<BeanRegistration<T>> beanRegistrations;
         if (beanDefinitions.isEmpty()) {
@@ -3504,8 +3713,8 @@ public class DefaultBeanContext implements InitializableBeanContext {
             candidateStream = candidateStream.filter(c -> {
                 if (c.equals(declaringBean)) {
                     return false;
-                } else if (declaringBean instanceof ProxyBeanDefinition) {
-                    return !((ProxyBeanDefinition) declaringBean).getTargetDefinitionType().equals(c.getClass());
+                } else if (declaringBean instanceof ProxyBeanDefinition<?> proxyBeanDefinition) {
+                    return !proxyBeanDefinition.getTargetDefinitionType().equals(c.getClass());
                 }
                 return true;
             });
@@ -3533,8 +3742,8 @@ public class DefaultBeanContext implements InitializableBeanContext {
         if (beanRegistration != null) {
             if (candidate.isContainerType()) {
                 Object container = beanRegistration.bean;
-                if (container instanceof Object[]) {
-                    container = Arrays.asList((Object[]) container);
+                if (container instanceof Object[] array) {
+                    container = Arrays.asList(array);
                 }
                 if (container instanceof Iterable) {
                     Iterable<Object> iterable = (Iterable<Object>) container;
@@ -3584,11 +3793,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
         List<BeanRegistration> sorted = new ArrayList<>(nullSafe(initial.get(true)));
         List<BeanRegistration> unsorted = new ArrayList<>(nullSafe(initial.get(false)));
         // Optimization which knows about types which are already in the sorted list
-        Set<Class> satisfied = new HashSet<>();
+        Set<Class<?>> satisfied = new HashSet<>();
 
         // Optimization for types which we know are already unsatisified
         // in a single iteration, allowing to skip the loop on unsorted elements
-        Set<Class> unsatisfied = new HashSet<>();
+        Set<Class<?>> unsatisfied = new HashSet<>();
 
         //loop until all items have been sorted
         while (!unsorted.isEmpty()) {
@@ -3601,7 +3810,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 boolean found = false;
 
                 //determine if any components are in the unsorted list
-                Collection<Class> components = bean.getBeanDefinition().getRequiredComponents();
+                Collection<Class<?>> components = bean.getBeanDefinition().getRequiredComponents();
                 for (Class<?> clazz : components) {
                     if (satisfied.contains(clazz)) {
                         continue;
@@ -3887,7 +4096,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
          * @param qualifier     The qualifier
          * @param typeArguments The type arguments
          */
-        BeanKey(Class<T> beanType, Qualifier<T> qualifier, @Nullable Class... typeArguments) {
+        BeanKey(Class<T> beanType, Qualifier<T> qualifier, @Nullable Class<?>... typeArguments) {
             this(Argument.of(beanType, typeArguments), qualifier);
         }
 
